<resources>
    <string name="app_name">Desafio1DSM</string>
    <string name="indicacionPromedio">Ingresa tus 5 notas para calcular tu promedio</string>
    <string name="btnVolver">Volver</string>
    <string name="nombre">Nombre completo</string>
    <string name="primeraNota">Primera Nota 15%</string>
    <string name="segundaNota">Segunda Nota 15%</string>
    <string name="terceraNota">Tercera Nota 20%</string>
    <string name="cuartaNota">Cuarta Nota 25%</string>
    <string name="quintaNota">Quinta Nota 25%</string>
    <string name="btnCalcular">Calcular </string>
    <string name="btnBorrar">Borrar</string>
    <string name="textEjercicio1">Calcular Promedio final</string>
    <string name="textEjercicio2">descuentos salariales </string>
    <string name="descuent">Ingresa tu salario para calcular los descuentos finales </string>
    <string name="txtelegir">Presiona cualquier boton para ver el problema</string>
    <string name="hint_input">Ingresa un número</string>
    <string name="add">Sumar</string>
    <string name="subtract">Restar</string>
    <string name="multiply">Multiplicar</string>
    <string name="divide">Dividir</string>
    <string name="result">Resultado: </string>
    <string name="clear">Limpiar</string>
    <string name="icon_description">Descripción del ícono</string>
</resources>